# Akun

./: .dockerignore  .env  PLANTILLAS_API.md  README-DOCKER.md  README.md  RENOMBRADO_MODELOS.md  analyze_db.py  check_apps.py  check_models.py  docker-compose.unified.yml  docker-compose.yml  fix_encoding.py  nginx.conf  package.json  start.bat  tailwind.config.js
aberturas/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  analyze_db.py  create_basic_data.py  create_complete_fixtures.py  create_template_example.py  create_units.py  docker-compose.yml  entrypoint.sh  fix_critical_errors.sql  load_system_data.py  manage.py  plantillas_con_atributos_completas.md  pyproject.toml  requirements.txt  resumen_correccion_completada.md  run_with_logs.py  setup_complete_system.py  test_dynamic_filtering.html
aberturas/aberturas/: asgi.py  urls.py  wsgi.py
aberturas/aberturas/settings/: base.py  dev.py  prod.py
aberturas/apps/accounts/: admin.py  models.py  serializers.py  simple_login.py  urls.py  views.py
aberturas/apps/catalog/: admin.py  apps.py  forms.py  models.py  rest_views.py  serializers.py  services.py  tests.py  urls.py  views.py
aberturas/apps/core/: admin.py  apps.py  constants.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
aberturas/fixtures/: README_20251001_141301.md  parametria.json  plantilla_modena.json  productos.json
aberturas/frontend/: package.json  tailwind.config.js
aberturas/templates/: base.html  base_auth.html
src/: App.tsx  (+4 more)
(+160 files in other folders)
